--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,5 @@
             "Cyvelnet\\Laravel5Fractal\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
